--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -25,200 +25,215 @@
 
   <body class="body">
     <header class="header">
-      <nav class="nav">
-        <a href="./index.html" class="logo">
-          Web<span class="logo-header">Studio</span>
-        </a>
+      <div class="container">
+        <nav class="nav">
+          <a href="./index.html" class="logo logo-footer">
+            Web<span class="logo-dark">Studio</span>
+          </a>
 
-        <ul class="list nav">
-          <li class="nav-element">
-            <a class="header-link nav-link" href="./index.html">Studio</a>
-          </li>
-          <li class="nav-element">
-            <a class="header-link nav-link" href="">Portfolio</a>
-          </li>
-          <li class="nav-element">
-            <a class="header-link nav-link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
+          <ul class="list nav-list">
+            <li class="nav-element">
+              <a class="header-link nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-element">
+              <a class="header-link nav-link" href="">Portfolio</a>
+            </li>
+            <li class="nav-element">
+              <a class="header-link nav-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
 
-      <address class="contacts">
-        <ul class="list contacts-items">
-          <li class="contact contacts-mail">
-            <a class="header-link contact-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contact contacts-tel">
-            <a class="header-link contact-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="contacts">
+          <ul class="list contacts-list">
+            <li class="contact contacts-mail">
+              <a
+                class="header-link contact-link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contact contacts-tel">
+              <a class="header-link contact-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main class="main">
-      <section class="section main-section">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button class="main-button" type="button">Order Service</button>
+      <section class="section hero-section">
+        <div class="container container--hero container-main">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-button" type="button">Order Service</button>
+        </div>
       </section>
 
       <section class="section benefits-section">
-        <h2 class="section-title">Benefits</h2>
-        <ul class="list">
-          <li class="benefits-item">
-            <h3 class="item-title">Strategy</h3>
-            <p class="item-content">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="item-title">Punctuality</h3>
-            <p class="item-content">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="item-title">Diligence</h3>
-            <p class="item-content">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="item-title">Technologies</h3>
-            <p class="item-content">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container container-main">
+          <h2 class="section-title offscreen">Benefits</h2>
+          <ul class="list">
+            <li class="benefits-item">
+              <h3 class="item-title">Strategy</h3>
+              <p class="item-content">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="item-title">Punctuality</h3>
+              <p class="item-content">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="item-title">Diligence</h3>
+              <p class="item-content">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="item-title">Technologies</h3>
+              <p class="item-content">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="section team-section">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="list">
-          <li class="item-team">
-            <img
-              src="./images/team/mark.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="item-title">Mark Guerrero</h3>
-            <p class="item-content">Product Designer</p>
-          </li>
-          <li class="item-team">
-            <img
-              src="./images/team/tom.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="item-title">Tom Ford</h3>
-            <p class="item-content">Frontend Developer</p>
-          </li>
-          <li class="item-team">
-            <img
-              src="./images/team/camila.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="item-title">Camila Garcia</h3>
-            <p class="item-content">Marketing</p>
-          </li>
-          <li class="item-team">
-            <img
-              src="./images/team/daniel.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="item-title">Daniel Wilson</h3>
-            <p class="item-content">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container container-main">
+          <h2 class="section-title">Our Team</h2>
+          <ul class="list">
+            <li class="item-team">
+              <img
+                src="./images/team/mark.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="item-title">Mark Guerrero</h3>
+              <p class="item-content">Product Designer</p>
+            </li>
+            <li class="item-team">
+              <img
+                src="./images/team/tom.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="item-title">Tom Ford</h3>
+              <p class="item-content">Frontend Developer</p>
+            </li>
+            <li class="item-team">
+              <img
+                src="./images/team/camila.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="item-title">Camila Garcia</h3>
+              <p class="item-content">Marketing</p>
+            </li>
+            <li class="item-team">
+              <img
+                src="./images/team/daniel.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="item-title">Daniel Wilson</h3>
+              <p class="item-content">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="section portfolio-section">
-        <h2 class="section-title">Our Portfolio</h2>
-        <ul class="list">
-          <li class="portfolio-item">
-            <img
-              src="./images/portfolio/img_1.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="item-title">Banking App</h3>
-            <p class="item-content">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/portfolio/img_3.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="item-title">Cashless Payment</h3>
-            <p class="item-content">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/portfolio/img_4.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="item-title">Meditation App</h3>
-            <p class="item-content">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/portfolio/img_4.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="item-title">Taxi Service</h3>
-            <p class="item-content">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/portfolio/img_5.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="item-title">Screen Illustrations</h3>
-            <p class="item-content">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/portfolio/img_6.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="item-title">Online Courses</h3>
-            <p class="item-content">Marketing</p>
-          </li>
-        </ul>
+        <div class="container container-main">
+          <h2 class="section-title">Our Portfolio</h2>
+          <ul class="list">
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio/img_1.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="item-title">Banking App</h3>
+              <p class="item-content">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio/img_3.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="item-title">Cashless Payment</h3>
+              <p class="item-content">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio/img_4.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h3 class="item-title">Meditation App</h3>
+              <p class="item-content">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio/img_4.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h3 class="item-title">Taxi Service</h3>
+              <p class="item-content">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio/img_5.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="item-title">Screen Illustrations</h3>
+              <p class="item-content">Design</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio/img_6.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h3 class="item-title">Online Courses</h3>
+              <p class="item-content">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
+
     <footer class="footer">
-      <a href="./index.html" class="logo">
-        Web<span class="logo-footer">Studio</span></a
-      >
-      <p class="footer-content">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container container-footer">
+        <a href="./index.html" class="logo">
+          Web<span class="logo-white">Studio</span></a
+        >
+        <p class="footer-content">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
