--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <section class="section benefits-section">
         <div class="container container-main">
-          <h2 class="section-title offscreen">Benefits</h2>
+          <h2 class="section-title visually-hidden">Benefits</h2>
           <ul class="list">
             <li class="benefits-item">
               <h3 class="item-title">Strategy</h3>
@@ -118,8 +118,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="item-title">Mark Guerrero</h3>
-              <p class="item-content">Product Designer</p>
+              <div class="employee-content">
+                <h3 class="item-title">Mark Guerrero</h3>
+              <p class="item-content employee_position">Product Designer</p>
+              </div>
             </li>
             <li class="item-team">
               <img
@@ -128,8 +130,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="item-title">Tom Ford</h3>
-              <p class="item-content">Frontend Developer</p>
+              <div class="employee_inform">
+                <h3 class="item-title">Tom Ford</h3>
+              <p class="item-content employee_position">Frontend Developer</p>
+              </div>
             </li>
             <li class="item-team">
               <img
@@ -138,8 +142,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="item-title">Camila Garcia</h3>
-              <p class="item-content">Marketing</p>
+              <div class="employee_inform">
+                <h3 class="item-title">Camila Garcia</h3>
+                <p class="item-content employee_position">Marketing</p>
+              </div>
             </li>
             <li class="item-team">
               <img
@@ -148,8 +154,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="item-title">Daniel Wilson</h3>
-              <p class="item-content">UI Designer</p>
+              <div class="employee_inform">
+                <h3 class="item-title">Daniel Wilson</h3>
+                <p class="item-content employee_position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
