--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header class="header">
       <div class="container">
         <nav class="nav">
-          <a href="./index.html" class="logo logo-footer">
+          <a href="./index.html" class="logo">
             Web<span class="logo-dark">Studio</span>
           </a>
 
@@ -65,39 +65,39 @@
 
     <main class="main">
       <section class="section hero-section">
-        <div class="container container--hero container-main">
+        <div class="container container-hero">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button">Order Service</button>
         </div>
       </section>
 
       <section class="section benefits-section">
-        <div class="container container-main">
+        <div class="container container-benefits">
           <h2 class="section-title visually-hidden">Benefits</h2>
           <ul class="list">
             <li class="benefits-item">
-              <h3 class="item-title">Strategy</h3>
+              <h3 class="item-title benefits-title">Strategy</h3>
               <p class="item-content">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
             <li class="benefits-item">
-              <h3 class="item-title">Punctuality</h3>
+              <h3 class="item-title benefits-title">Punctuality</h3>
               <p class="item-content">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li class="benefits-item">
-              <h3 class="item-title">Diligence</h3>
+              <h3 class="item-title benefits-title">Diligence</h3>
               <p class="item-content">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li class="benefits-item">
-              <h3 class="item-title">Technologies</h3>
+              <h3 class="item-title benefits-title">Technologies</h3>
               <p class="item-content">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -234,7 +234,7 @@
 
     <footer class="footer">
       <div class="container container-footer">
-        <a href="./index.html" class="logo">
+        <a href="./index.html" class="logo logo-footer">
           Web<span class="logo-white">Studio</span></a
         >
         <p class="footer-content">
