--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     </header>
 
     <main class="main">
+      <div class="container container-hero"></div>
       <section class="section hero-section">
-        <div class="container container-hero">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button">Order Service</button>
         </div>
@@ -108,8 +108,8 @@
       </section>
 
       <section class="section team-section">
+        <div class="container container-main"></div>
         <h2 class="section-title">Our Team</h2>
-        <div class="container container-main">
           <ul class="list">
             <li class="item-team">
               <img
@@ -164,8 +164,8 @@
       </section>
 
       <section class="section portfolio-section">
+        <div class="container"></div>
         <h2 class="section-title">Our Portfolio</h2>
-        <div class="container">
           <ul class="list portfolio-list">
             <li class="portfolio-item">
               <img
