--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
     </header>
 
     <main class="main">
-      <div class="container container-hero"></div>
       <section class="section hero-section">
+        <div class="container container-hero">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button">Order Service</button>
         </div>
       </section>
 
       <section class="section benefits-section">
-        <h2 class="section-title visually-hidden">Benefits</h2>
         <div class="container container-benefits">
+          <h2 class="section-title visually-hidden">Benefits</h2>
           <ul class="list">
             <li class="benefits-item">
               <h3 class="item-title benefits-title">Strategy</h3>
@@ -108,8 +108,8 @@
       </section>
 
       <section class="section team-section">
-        <div class="container container-main"></div>
-        <h2 class="section-title">Our Team</h2>
+        <div class="container container-team">
+          <h2 class="section-title">Our Team</h2>
           <ul class="list">
             <li class="item-team">
               <img
@@ -164,8 +164,8 @@
       </section>
 
       <section class="section portfolio-section">
-        <div class="container"></div>
-        <h2 class="section-title">Our Portfolio</h2>
+        <div class="container container-portfolio">
+          <h2 class="section-title">Our Portfolio</h2>
           <ul class="list portfolio-list">
             <li class="portfolio-item">
               <img
