--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header class="header">
       <div class="container">
         <nav class="nav">
-          <a href="./index.html" class="logo logo-header">
+          <a href="./index.html" class="logo-header logo">
             Web<span class="logo-dark">Studio</span>
           </a>
 
@@ -251,7 +251,7 @@
 
     <footer class="footer">
       <div class="container container-footer">
-        <a href="./index.html" class="logo logo-footer">
+        <a href="./index.html" class="logo-footer logo">
           Web<span class="logo-white">Studio</span></a
         >
         <p class="footer-content">
