--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <section class="section benefits-section">
         <div class="container container-benefits">
-          <h2 class="section-title visually-hidden">Benefits</h2>
+          <h2 class="visually-hidden section-title">Benefits</h2>
           <ul class="list">
             <li class="benefits-item">
               <h3 class="item-title benefits-title">Strategy</h3>
