--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <body class="body">
     <header class="header">
-      <div class="container">
+      <div class="container container-header">
         <nav class="nav">
           <a href="./index.html" class="logo-header logo">
             Web<span class="logo-dark">Studio</span>
@@ -73,7 +73,7 @@
 
       <section class="section benefits-section">
         <div class="container container-benefits">
-          <h2 class="visually-hidden section-title">Benefits</h2>
+          <h2 class="visually-hidden">Benefits</h2>
           <ul class="list">
             <li class="benefits-item">
               <h3 class="item-title benefits-title">Strategy</h3>
